cmake_minimum_required (VERSION 2.6)
include(../../CMakeCommon.txt)
include(../../../systemc_cmake.txt)
project (testbench)
#include(../../../systemc_model_cmake.txt)
include_directories(${PROJECT_SOURCE_DIR}/inc)
include_directories("${PROJECT_SOURCE_DIR}/../../inc")
include_directories("${PROJECT_SOURCE_DIR}/../tlmdriver/inc")
link_directories("${PROJECT_SOURCE_DIR}/../../lib/Debug")
link_directories("${PROJECT_SOURCE_DIR}/../tlmdriver/lib/Debug")
file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} systemc-2.3.1)
target_link_libraries(${PROJECT_NAME} vdm_proto)
target_link_libraries(${PROJECT_NAME} tlmdriver)
install(TARGETS ${PROJECT_NAME} DESTINATION ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})